# arb-token

./: .env.template  README.md  config.js  package-lock.json  package.json
actions/: _addArbaroPermission.js  _contosoCreateToken.js  _contosoGivePermission.js  _getbalance.js  _issueTest3.js  _new.js  _print.js  close.js  create.js  issue.js  issuediv.js  open.js  retire.js  transfer.js
contract/: CMakeLists.txt  arbaroToken.cpp  arbaroToken.hpp  arbaroToken.init_rc.md
scripts/create_actions/: index.js
tests/: test.test.js
utils/: others.js
